@@ -1,0 +1,5 @@
+#!/bin/sh
+
+aclocal || exit 1
+autoconf || exit 1
+
