@@ -1,5 +1,13 @@
 2007-08-12  Kohei Yoshida  <kyoshida@novell.com>
 
+	* workben/addon_pkg/autogen.sh:
+	* workben/addon_pkg/configure.ac:
+	* workben/addon_pkg/Makefile.in: added so that we can use autoconf.
+
+	* workben/addon_pkg/Makefile: moved to Makefile_build as a backup.
+
+2007-08-12  Kohei Yoshida  <kyoshida@novell.com>
+
 	* source/ui/scsolver.hrc: moved to source/inc/scsolver.hrc to make it 
 	globally accessible.
 	
